cmake_minimum_required(VERSION 2.6)
find_package (Threads)
add_executable(calculate_prime_numbers calculate_prime_numbers.cc)
target_link_libraries(calculate_prime_numbers ${CMAKE_THREAD_LIBS_INIT})
add_executable(calculate_private_key calculate_private_key.cc)
target_link_libraries(calculate_private_key ${CMAKE_THREAD_LIBS_INIT})
add_executable(factoring factoring.cc)
target_link_libraries(factoring ${CMAKE_THREAD_LIBS_INIT})
add_executable(generate_primes generate_primes.cc )
target_link_libraries(generate_primes ${CMAKE_THREAD_LIBS_INIT})
add_executable(multiplication multiplication.cc )
target_link_libraries(multiplication ${CMAKE_THREAD_LIBS_INIT})
add_executable(releatively_prime_number releatively_prime_number.cc )
target_link_libraries(releatively_prime_number ${CMAKE_THREAD_LIBS_INIT})
